cilium/egress.yaml
---
# Source: network-policy-cluster/templates/cilium-clusterwide-netpol.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: egress-ip-ranges-common-l4-rule
spec:
  egress:
  - toCIDR:
    - 169.254.169.254/32 # workload identity
    - 169.254.169.252/32 # workload identity
    - 199.36.153.8/30 # private googleapis
    - 130.211.0.0/22 # health checks
    - 35.191.0.0/16 # health checks
    - 10.0.0.0/8
  - toEntities:
      - cluster
  endpointSelector:
    matchExpressions:
    - key: io.kubernetes.pod.namespace
      operator: In
      values:
      - backend
      - default
